add: 나무 이미지 추가

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="popup.css" />
     <title>Number Counter</title>
   </head>
   <body>
-    <button id="counterBtn">click</button>
+    <header>Nurture Nature!</header>
+    <section>
+      <img id="plantImg" src="" alt="" />
+      <button id="counterBtn">click</button>
+      <button id="clearBtn">clear</button>
+    </section>
     <div id="counter">0</div>
-    <script src="../background.js"></script>
     <script src="popup.js"></script>
   </body>
 </html>
