add: 깃헙에서 총 커밋수와 날짜별 커밋 수 불러와서 디스플레이

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -9,7 +9,8 @@
     <section>
       <img id="plantImg" src="" alt="" />
       <button id="counterBtn">click</button>
-      <button id="clearBtn">clear</button>
+      <button id="refreshBtn">refresh</button>
+      <div id="list-container"></div>
     </section>
     <div id="counter">0</div>
     <script src="popup.js"></script>
