add: 최근 10일의 커밋 개수 불러와서 디스플레이하기

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <link rel="stylesheet" href="popup.css" />
-    <title>Number Counter</title>
+    <title>Nurture Nature!</title>
   </head>
   <body>
     <header>Nurture Nature!</header>
-    <section>
-      <img id="plantImg" src="" alt="" />
-      <button id="counterBtn">click</button>
-      <button id="refreshBtn">refresh</button>
+    <section class="main-section">
+      <img id="plant-img" src="" alt="" />
+      <button id="counter-btn">click</button>
+      <button id="refresh-btn">refresh</button>
       <div id="list-container"></div>
     </section>
     <div id="counter">0</div>
