--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -6,7 +6,7 @@
     <title>Nurture Nature!</title>
   </head>
   <body>
-    <section class="main-section">
+    <section id="main-section" class="popup-section">
       <header>Nurture Nature!</header>
       <div calss="row-layout">
         <span class="default-font">총 커밋 수 - </span>
@@ -16,8 +16,16 @@
       <img id="plant-img" src="" alt="" />
       <div id="list-container"></div>
       <hr class="line" />
-      <button id="counter-btn" class="menu-button">click</button>
-      <button id="refresh-btn" class="menu-button">refresh</button>
+      <button id="set-userId-btn" class="menu-button">아이디 설정</button>
+      <button id="refresh-btn" class="menu-button">새로고침</button>
+    </section>
+    <section
+      id="set-userId-section"
+      class="popup-section"
+      style="display: none"
+    >
+      set-userId-section
+      <button id="back-btn">뒤로가기</button>
     </section>
     <script src="popup.js"></script>
   </body>
