--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -6,27 +6,49 @@
     <title>Nurture Nature!</title>
   </head>
   <body>
+    <!-- 메인 팝업 -->
     <section id="main-section" class="popup-section">
-      <header>Nurture Nature!</header>
-      <div calss="row-layout">
-        <span class="default-font">총 커밋 수 - </span>
-        <span id="counter">0</span>
-      </div>
+      <header class="main-section-header">
+        <a id="hello-user-a"></a>
+        <div class="row-layout">
+          <h1>총 커밋 수 -&nbsp;</h1>
+          <h1 id="counter">0</h1>
+        </div>
+        <img id="plant-img" src="" alt="" />
+      </header>
       <hr class="line" />
-      <img id="plant-img" src="" alt="" />
-      <div id="list-container"></div>
+      <div id="date-list-container"></div>
       <hr class="line" />
       <button id="set-userId-btn" class="menu-button">아이디 설정</button>
       <button id="refresh-btn" class="menu-button">새로고침</button>
     </section>
-    <section
-      id="set-userId-section"
-      class="popup-section"
-      style="display: none"
-    >
-      set-userId-section
-      <button id="back-btn">뒤로가기</button>
+    <!-- 메인 팝업 -->
+    <!-- 유저 아이디 설정 팝업 -->
+    <section id="set-userId-section" class="popup-section">
+      <label for="userId-input" class="text-input-label">
+        <h1 class="title-text">아이디를 설정합니다</h1>
+        <span class="description-text"> Github 아이디를 입력하세요. </span>
+        <br />
+      </label>
+      <input
+        type="text"
+        placeholder="Github 유저 아이디"
+        id="userId-input"
+        class="text-input"
+      />
+      <div class="row-layout" style="justify-content: center">
+        <button id="back-btn" class="cancel-style-btn submit-style-btn">
+          취소
+        </button>
+        <button
+          id="userId-submit-btn"
+          class="answer-style-btn submit-style-btn"
+        >
+          확인
+        </button>
+      </div>
     </section>
+    <!-- 유저 아이디 설정 팝업 -->
     <script src="popup.js"></script>
   </body>
 </html>
