add: commit 이미지 추가

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -9,7 +9,7 @@
     <!-- 메인 팝업 -->
     <section id="main-section" class="popup-section">
       <header class="main-section-header">
-        <a id="hello-user-a"></a>
+        <a id="hello-user-a" target="_blank"></a>
         <div class="row-layout">
           <h1>총 커밋 수 -&nbsp;</h1>
           <h1 id="counter">0</h1>
