--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -11,7 +11,7 @@
       <header class="main-section-header">
         <a id="hello-user-a" target="_blank"></a>
         <div class="row-layout">
-          <h1>총 커밋 수 -&nbsp;</h1>
+          <h1>최근 10일 간 커밋 수 -&nbsp;</h1>
           <h1 id="counter">0</h1>
         </div>
         <img id="plant-img" src="" alt="" />
@@ -19,8 +19,14 @@
       <hr class="line" />
       <div id="date-list-container"></div>
       <hr class="line" />
-      <button id="set-userId-btn" class="menu-button">아이디 설정</button>
-      <button id="refresh-btn" class="menu-button">새로고침</button>
+      <button id="set-userId-btn" class="menu-button">
+        <span> 아이디 설정 </span>
+        <!-- <span class="short-cut-text"> ⌘U </span> -->
+      </button>
+      <button id="refresh-btn" class="menu-button">
+        <span> 새로고침 </span>
+        <!-- <span class="short-cut-text"> ⌘R </span> -->
+      </button>
     </section>
     <!-- 메인 팝업 -->
     <!-- 유저 아이디 설정 팝업 -->
