--- a/src/options/options.html
+++ b/src/options/options.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="kr">
   <head>
     <link rel="stylesheet" href="options.css" />
     <title>option page</title>
