add: 팝업 영어 추가

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -25,23 +25,37 @@
       <!-- 아이디 설정 / 새로고침 / 닫기 버튼 -->
       <hr class="line" />
       <button id="set-userId-btn" class="menu-button">
-        <span>아이디 설정</span>
+        <div>
+          <span>아이디 설정 </span>
+          <span style="color: var(--color-dark-grey)"> Set Github Id </span>
+        </div>
         <!-- <span class="short-cut-text"> ⌘U </span> -->
       </button>
       <button id="refresh-btn" class="menu-button">
-        <span>새로고침</span>
+        <div>
+          <span>새로고침 </span>
+          <span style="color: var(--color-dark-grey)"> Refresh </span>
+        </div>
         <!-- <span class="short-cut-text"> ⌘R </span> -->
       </button>
       <button id="close-btn" class="menu-button">
-        <span>닫기</span>
+        <div>
+          <span>닫기 </span>
+          <span style="color: var(--color-dark-grey)"> Close </span>
+        </div>
         <!-- <span class="short-cut-text"> ⌘Q </span> -->
       </button>
       <!-- 아이디 설정 / 새로고침 / 닫기 버튼 -->
       <!-- 개발자 문의 버튼 -->
       <hr class="line" />
-      <button id="connet-dev" class="menu-button">
+      <button id="connect-dev" class="menu-button">
         <a href="mailto: min390@uos.ac.kr" style="width: 100%; display: flex">
-          <span>개발자 문의</span>
+          <div>
+            <span>개발자 문의 </span>
+            <span style="color: var(--color-dark-grey)">
+              Connect developer</span
+            >
+          </div>
         </a>
       </button>
       <!-- 개발자 문의 버튼 -->
