fix: 웹팩 수정, 초기화시 DOM이 없는 경우 오류 해결

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -27,7 +27,7 @@
       <button id="set-userId-btn" class="menu-button">
         <div>
           <span>아이디 설정 </span>
-          <span class="sub-en-text"> Set Github Id </span>
+          <span class="sub-en-text"> Set Github ID </span>
         </div>
         <!-- <span class="short-cut-text"> ⌘U </span> -->
       </button>
